<resources>
    <string name="app_name">Queue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_create_queue">Create Queue</string>
    <string name="menu_find_queue">Find Queue</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_in_sign_up">Sign in/Sign up</string>
    <string name="menu_logout">Logout</string>

    <string name="queue_name">Queue Name</string>
    <string name="description">Description</string>
    <string name="create_queue">Create Queue</string>
    <string name="submit">submit</string>
    <string name="create_an_account">Create An Account</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="unknown_user">Unknown User</string>
    <string name="find_queue">Find Queue</string>
    <string name="enter_queue_code">Enter queue code</string>
    <string name="menu_delete_queue">Delete queue</string>
    <string name="menu_share_queue">Share</string>
    <string name="not_implemented">Not implemented</string>
    <string name="queue_deleted">Queue deleted</string>


</resources>