<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_create_queue"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_create_queue" />
        <item
            android:id="@+id/nav_find_queue"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_find_queue" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sign_in_sign_up" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout"
            android:visible="false"/>
    </group>
</menu>