<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.queue.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create_queue"
        android:name="com.example.queue.ui.fragments.CreateQueueFragment"
        android:label="@string/menu_create_queue"
        tools:layout="@layout/fragment_create_queue" />

    <fragment
        android:id="@+id/nav_find_queue"
        android:name="com.example.queue.ui.fragments.FindQueueFragment"
        android:label="@string/menu_find_queue"
        tools:layout="@layout/fragment_find_queue" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.queue.ui.fragments.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.queue.ui.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>

    <fragment
        android:id="@+id/nav_sign_in"
        android:name="com.example.queue.ui.fragments.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_signUpFragment"
            app:destination="@id/nav_sign_up"
            app:popUpTo="@id/nav_sign_in"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.example.queue.ui.fragments.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_nav_login"
            app:destination="@id/nav_sign_in"
            app:popUpTo="@id/nav_sign_up"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>